--- a/style.css
+++ b/style.css
@@ -9,9 +9,14 @@ h3, h4{
     font-weight: bold;
 }
 
+ul {
+    list-style: none;
+}
+
 a {
     font-size: 20px;
     color: black;
+    text-decoration: none;
 }
 
 img {
